--- a/unit-5/137-CA-05.tex
+++ b/unit-5/137-CA-05.tex
@@ -166,28 +166,42 @@
 \begin{frame}
 	\frametitle{MAT137 Lecture 27 --- Rolle's Theorem}
 
+	{\bf Warmup:}
+
+	Write down, in set-builder notation, the domain of $\tan$, the tangent function.
+
 	\vfill
 	{\bf Before next class:}
 		\begin{itemize} \normalsize
 			\item {\bf Watch videos  5.7, 5.8, 5.9}
 		\end{itemize}
 \end{frame}
+	\begin{frame}
+		\frametitle{Definition of local extremum}
 
+		Find local and global extrema of the function with this graph:
 
-	\begin{frame}[t]
-		\frametitle{True or False---Local Extrema}
-
-		Let $I$ be an interval. Let $f$ be a function defined on $I$. Let $c\in I$.
-
-		Which implications are true?
-		\begin{enumerate}
-			\item IF $f$ has local extreme at $c$ , THEN $f$ has an extreme at $c$
-			\item IF $f$ has an extreme at $c$, THEN $f$ has local extreme at $c$
-			\item IF $f$ has a local extreme at $c$, THEN $f' (c ) = 0$.
-			\item IF $f'(c ) = 0$, THEN $f$ has a local extreme at $c$.
-		\end{enumerate}
-
+		\begin{center}
+			\includegraphics[scale=.42]{G13}
+		\end{center}
 	\end{frame}
+
+
+	%\begin{frame}[t]
+	%	\frametitle{True or False --- Local Extrema}
+
+	%	Let $I$ be an interval. Let $f$ be a function defined on $I$. Let $c\in I$.
+
+	%	Which implications are true?
+	%	\begin{enumerate}
+	%		\item IF $f$ has local extreme at $c$ , THEN $f$ has an extreme at $c$
+	%		\item IF $f$ has an extreme at $c$, THEN $f$ has local extreme at $c$
+	%		\item IF $f$ has a local extreme at $c$, THEN $f' (c ) = 0$.
+	%		\item IF $f'(c ) = 0$, THEN $f$ has a local extreme at $c$.
+	%		\item None of these.
+	%	\end{enumerate}
+
+	%\end{frame}
 
 	\begin{frame}[t]
 		\frametitle{How many zeroes?}
