--- a/unit-5/137-CA-05.tex
+++ b/unit-5/137-CA-05.tex
@@ -217,14 +217,16 @@
 	\begin{frame}[t]
 		\frametitle{The second Theorem of Rolle}
 
-		Complete statement for this theorem and prove it.
+		Complete the statement for this theorem and prove it.
 
 		\vfill
 
 		\begin{block}{Rolle's Theorem 2}
 			Let $a<b$. Let $f$ be a function defined on $[a,b]$. \\ IF
 			\begin{itemize}
-				\item (Some conditions on continuity and derivatives)
+				\item Some conditions on continuity and derivatives
+
+					\emph{[state these conditions precisely]}
 
 				\item $\displaystyle f(a) = f'(a) =0$
 
