--- a/unit-5/137-CA-05.tex
+++ b/unit-5/137-CA-05.tex
@@ -176,6 +176,22 @@
 			\item {\bf Watch videos  5.7, 5.8, 5.9}
 		\end{itemize}
 \end{frame}
+	\begin{frame}[t]
+		\frametitle{Domain of $\tan$}
+
+		Which of these correctly describe the domain of $\tan$?
+		\begin{enumerate}
+			\item $\Big\{x\in\mathbb R: x\neq \tfrac{\pi k}{2},\ k\in\{\text{odd integers}\}\Big\}$
+			\item $\Big\{x\in\mathbb R: x\neq \tfrac{\pi k}{2},\ \forall k\in\{\text{odd integers}\}\Big\}$
+			\item $\Big\{x\in\mathbb R: \forall k\in\{\text{odd integers}\}, x\neq \tfrac{\pi k}{2} \Big\}$
+			%\item $\Big\{x\in\mathbb R: x\neq \tfrac{\pi k}{2},\ \exists k\in\{\text{odd integers}\}\Big\}$
+			\item $\Big\{x\in\mathbb R: \exists k\in\{\text{odd integers}\}, x\neq \tfrac{\pi k}{2} \Big\}$
+			\item $\Big\{x\in\mathbb R: \forall k\in\mathbb Z, k\text{ is odd and } x\neq \tfrac{\pi k}{2} \Big\}$
+			\item $\Big\{x\in\mathbb R: \forall k\in\mathbb Z, k\text{ is odd }\implies x\neq \tfrac{\pi k}{2} \Big\}$
+		\end{enumerate}
+
+	\end{frame}
+
 	\begin{frame}
 		\frametitle{Definition of local extremum}
 
@@ -185,7 +201,7 @@
 			\includegraphics[scale=.42]{G13}
 		\end{center}
 	\end{frame}
-
+	
 
 	%\begin{frame}[t]
 	%	\frametitle{True or False --- Local Extrema}
